# snake-game

./: CMakeLists.txt  Main.qml  main.cpp
android/: AndroidManifest.xml
